INFRA-1472 fix cram conversion script